# supabase-schema-mcp

./: .env.example  CURSOR_RULE.md  LICENSE  README.md  pyproject.toml  ruff.toml
docs/: tools-reference.md
src/supabase_schema_mcp/: __init__.py  management_api.py  server.py
src/supabase_schema_mcp/tools/: __init__.py  functions.py  rls.py  triggers.py
supabase-schema-mcp/: CONTRIBUTING.md  README.md
supabase-schema-mcp/src/supabase_schema_mcp/: config.py  db.py  server.py
supabase-schema-mcp/src/supabase_schema_mcp/tools/: relationships.py  schema.py
